Show ID Banner, notification & popup notif (enabling comment)

--- a/src/app/pages/inapp-marketing/banner/index/banner-index.component.html
+++ b/src/app/pages/inapp-marketing/banner/index/banner-index.component.html
@@ -36,11 +36,11 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <!-- <ngx-datatable-column name="ID" prop="id">
+        <ngx-datatable-column name="ID" prop="id">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <span class="row-name" (click)="directDetail(row)">{{row.id}}</span>
           </ng-template>
-        </ngx-datatable-column> -->
+        </ngx-datatable-column>
 
         <ngx-datatable-column [width]="140" name="" [canAutoResize]="false" [sortable]="true">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
