--- a/src/app/pages/content-management/help/index/help-index.component.html
+++ b/src/app/pages/content-management/help/index/help-index.component.html
@@ -28,8 +28,16 @@
             <span class="row-name" (click)="directEdit(row)">{{row.title}}</span>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column [width]="400" name="Grup Pengguna" prop="user"></ngx-datatable-column>
+        <ngx-datatable-column [width]="200" name="Grup Pengguna" prop="user"></ngx-datatable-column>
         <!-- <ngx-datatable-column name="Halaman Tujuan" prop="slug"></ngx-datatable-column> -->
+
+        <ngx-datatable-column [width]="100" name="Likes" prop="likes_count"></ngx-datatable-column>
+        <ngx-datatable-column [width]="100" name="Dislikes" prop="unlikes_count"></ngx-datatable-column>
+        <ngx-datatable-column [width]="100" name="Perubahan Terakhir" prop="updated_at">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            <span class="row-name" >{{row.updated_at | date:'dd MMM yyyy'}}</span>
+          </ng-template>
+        </ngx-datatable-column>
 
         <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
