disabled input button text required validation & change password validation on Paguyuban

--- a/src/app/pages/user-management/paguyuban/create/paguyuban-create.component.html
+++ b/src/app/pages/user-management/paguyuban/create/paguyuban-create.component.html
@@ -55,7 +55,8 @@
                   Kata sandi harus diisi.
                 </mat-error>
                 <mat-error *ngIf="verticalStepperStep1.controls['password'].hasError('notValid')">
-                  Password Not Valid, doesn't meet requirement!
+                  Kata sandi Anda setidaknya harus memiliki, Panjang 8 karakter, 1 huruf besar & 1 karakter huruf kecil
+                  & 1 angka
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light">
