--- a/src/app/pages/popup-notification/create/popup-notification-create.component.html
+++ b/src/app/pages/popup-notification/create/popup-notification-create.component.html
@@ -350,7 +350,8 @@
               [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true"
               [reorderable]="reorderable" [count]="pagination.total" [limit]="pagination.per_page"
               [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)"
-              (select)="onSelect($event)">
+              [selected]="selected" [selectionType]="'checkbox'" (select)='onSelect($event)'
+              [selectCheck]='selectCheck'>
 
               <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false">
                 <!-- <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
